Cluster operator will publish events to K8s when Kafka pods are restarted (#6663)
* Kafka roller will publish events to K8s when pods are restarted

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Syntax and Javadoc

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Wire event publisher into reconciler, clarify some logic (hopefully) in roller.

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Checkstyle fixups

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Wire in cluster operator pod name for usage in publishing restart events

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Fix failing test and checkstyle issue.

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Fix up tests, JavaDoc, checkstyle

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Change method name on RestartReasons to better indicate logic

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Add default for operator name to stop this change breaking existing installations

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Extract RestartContext out of KafkaRoller, and fix up logical bug Spotbugs saw, thanks Spotbugs!

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Code tweaks to be more explicit about mutated objects and where they're going

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Move new env var to Helm template

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Update derived resources

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Add integration test publishing events to Minikube K8s

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Update RBAC permissions for cluster operator to create events using events API

Signed-off-by: Liam Clarke-Hutchinson <liam@steelsky.co.nz>

* Use right fancy word for three dots

Signed-off-by: Lia